# cordslite

./: .gitignore  CHANGELOG.md  README.md  bot.html  bot.html.md  core.html  core.html.md  gateway.html  gateway.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  voice.html  voice.html.md
cordslite/: __init__.py  _modidx.py  bot.py  core.py  gateway.py  skill.py  voice.py
examples/: README.md
examples/recorder_tui/: README.md  recorder_tui.py
nbs/: 00_core.ipynb  01_gateway.ipynb  02_voice.ipynb  03_bot.ipynb  index.ipynb  nbdev.yml
