[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cordslite"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Nathan Cooper", email = "nathanacooper@proton.me"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/cordslite"
Documentation = "https://AnswerDotAI.github.io/cordslite/"

[project.entry-points.nbdev]
cordslite = "cordslite._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cordslite.__version__"}

[tool.setuptools.packages.find]
include = ["cordslite"]

[tool.nbdev]
